[tool.poetry]
name = "caibertest"
version = "0.0.1"
description = "A simple testing library for projectaile"
authors = ["abtExp <abt.exp@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
